--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,9 @@
 ---
-title: Hello World
-description: Your first document
+title: Prom Stock.
+description: Информационный портал Prom-Stock.
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
-
-## What is Next?
-
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+  <Card title="На главную" href="https://prom-stock.ru" />
+  <Card title="Перейти в каталог" href="https://prom-stock.ru/stock" />
 </Cards>
