--- a/content/docs/user-agreement.mdx
+++ b/content/docs/user-agreement.mdx
@@ -32,7 +32,7 @@ title: Пользовательское соглашение
 
 ## 2. Лицензионная оговорка.
 
-2.1. Принимая настоящую оферту, Пользователь предоставляет eFind неисключительное, неограниченное по территории использования,
+2.1. Принимая настоящую оферту, Пользователь предоставляет Prom-Stock неисключительное, неограниченное по территории использования,
 неограниченное по времени право использования Контента, размещаемого Пользователем и связанного с получением услуг.
 
 2.2. Заключая Пользовательское соглашение, prom-stock предоставляет Пользователю неисключительное, неограниченное по территории
@@ -66,12 +66,12 @@ client@prom-stock.ru. Направление данных сведений в а
 
 3.6. Оплата услуг производится Пользователем:
 
-    3.6.1. путем оформления и выполнения действий по оплате на Сайте. В этих целях prom-stock формирует и направляет Пользователю уведомление
-    о необходимости оплаты, содержащее инструкции по оплате и информацию о размере и способах оплаты, или
+3.6.1. путем оформления и выполнения действий по оплате на Сайте. В этих целях prom-stock формирует и направляет Пользователю уведомление
+о необходимости оплаты, содержащее инструкции по оплате и информацию о размере и способах оплаты, или
 
-    3.6.2. путем перечисления денежных средств на расчетный счет prom-stock. В этих целях prom-stock по запросу Пользователя направляет
-    Пользователю счет на указанный им адрес электронной почты. Отсутствие или отказ в направлении счета не является основанием для неоплаты услуг.
-    Оплата производится в сроки, указанные на Сайте или в счете, либо в согласованные Сторонами сроки.
+3.6.2. путем перечисления денежных средств на расчетный счет prom-stock. В этих целях prom-stock по запросу Пользователя направляет
+Пользователю счет на указанный им адрес электронной почты. Отсутствие или отказ в направлении счета не является основанием для неоплаты услуг.
+Оплата производится в сроки, указанные на Сайте или в счете, либо в согласованные Сторонами сроки.
 
 3.7. Стороны согласились, что составление актов об оказании услуг не требуется и не производится. В случае, если от Пользователя в течение
 3 (трех) рабочих дней с даты оказания услуги не поступили мотивированные возражения по качеству, объему или своевременности оказанных услуг, то
